--- a/.gitignore
+++ b/.gitignore
@@ -132,5 +132,9 @@ dmypy.json
 
 .vscode
 
-built/
-test/data/built
+test.sam
+tests/data/h37rv_10_2.r1.fastq.gz
+tests/data/h37rv_10_2.r2.fastq.gz
+tests/data/human-index
+tests/data/human.fa.gz
+tests/data/mtb-jeff
