--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,5 +25,6 @@ hostile = "hostile.cli:main"
 [project.optional-dependencies]
 dev = [
     "pytest>=7.3.1",
-    "pre-commit>=3.3.2"
+    "pre-commit>=3.3.2",
+    "flit>=3.9.0"
 ]
