--- a/environment.yml
+++ b/environment.yml
@@ -7,6 +7,6 @@ dependencies:
   - python>=3.10
   - pip
   - samtools>=1.17
-  - minimap2
-  - bowtie2
-  - gawk
+  - minimap2>=2.26
+  - bowtie2>=2.5.1
+  - gawk>=5.1.0
