Point URLs to object store

--- a/.gitignore
+++ b/.gitignore
@@ -136,5 +136,5 @@ test.sam
 tests/data/h37rv_10_2.r1.fastq.gz
 tests/data/h37rv_10_2.r2.fastq.gz
 tests/data/human-index
-tests/data/human.fa.gz
+tests/data/human-t2t-hla.fa.gz
 tests/data/mtb-jeff
