--- a/environment.yml
+++ b/environment.yml
@@ -8,6 +8,6 @@ dependencies:
   - pip
   - samtools>=1.17
   - minimap2>=2.26
-  - bowtie2>=2.5.1
+  - bowtie2=2.4.5
   - gawk>=5.1.0
   - bedtools>=2.31.0
