--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dynamic = ["version", "description"]
 requires-python = ">=3.10"
 dependencies = [
   "defopt>=6.4.0",
+  "dnaio>=1.2.0",
   "httpx>=0.24.1",
   "platformdirs>=3.5.1",
   "tqdm>=4.65.0",
