--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Extract repository name
         id: repo-name
         # Strip the owner and `/` from the repo env var
-        run: echo "REPOSITORY_NAME=${GITHUB_REPOSITORY#*/})" >> $GITHUB_ENV
+        run: echo "REPOSITORY_NAME=${GITHUB_REPOSITORY#*/}" >> $GITHUB_ENV
 
       - name: Login to OCIR in gpasltd
         uses: docker/login-action@v3
@@ -39,4 +39,4 @@ jobs:
           push: true
           file: Dockerfile
           tags:
-            "${REGISTRY}/${{ env.REPOSITORY_NAME }}:${{ github.event.release.tag_name }}"
+            "${{ env.REGISTRY }}/${{ env.REPOSITORY_NAME }}:${{ github.event.release.tag_name }}"
