--- a/environment.yml
+++ b/environment.yml
@@ -2,9 +2,8 @@ name: hostile
 channels:
   - conda-forge
   - bioconda
-  - defaults
 dependencies:
-  - python>=3.10
+  - python=3.10
   - pip
   - samtools>=1.17
   - minimap2>=2.26
