Soften pin on 3.10, Add CI 3.13 to CI

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,6 +12,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-24.04]
+        python-version: ["3.10", "3.13"]
     defaults:
       run:
         shell: bash -el {0}
@@ -21,7 +22,7 @@ jobs:
         with:
           activate-environment: hostile
           environment-file: environment.yml
-          python-version: "3.10"
+          python-version: ${{ matrix.python-version }}
           auto-activate-base: false
           conda-remove-defaults: true
       - run: pip install '.[dev]'
