--- a/environment.yml
+++ b/environment.yml
@@ -3,7 +3,7 @@ channels:
   - conda-forge
   - bioconda
 dependencies:
-  - python=3.10
+  - python>=3.10
   - pip
   - samtools>=1.17
   - minimap2>=2.28
